[gd_scene load_steps=12 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://player/player.gd" id="1_5iwea"]
[ext_resource type="PackedScene" uid="uid://c0e27836xgmhi" path="res://player/character.tscn" id="2_p2vss"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://assets/sprites/blob_shadow.png" id="3_mm5mu"]
[ext_resource type="Material" uid="uid://bww558h37ifom" path="res://player/trail/trail_material.tres" id="4_oal4v"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://assets/meshes/dust.res" id="4_w1jig"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://assets/sounds/walking.ogg" id="5_f3gvv"]
[ext_resource type="Curve" uid="uid://bhawasb2xnscw" path="res://player/trail/trail_curve.tres" id="6_4sn21"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="Curve" id="Curve_403d8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.254237, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_srh8m"]
curve = SubResource("Curve_403d8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lrxwi"]
emission_shape = 1
emission_sphere_radius = 0.2
gravity = Vector3(0, 0.1, 0)
scale_min = 0.75
scale_curve = SubResource("CurveTexture_srh8m")

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_5iwea")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Character" parent="." instance=ExtResource("2_p2vss")]

[node name="leg-left" parent="Character/character2/root" index="0"]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0.125, 0.17625, -0.02375)

[node name="leg-right" parent="Character/character2/root" index="1"]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -0.125, 0.17625, -0.02375)

[node name="torso" parent="Character/character2/root" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, -1.80478e-15, 0.17625, -0.02375)

[node name="arm-left" parent="Character/character2/root/torso" index="0"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0.3, 0.2, 0)

[node name="arm-right" parent="Character/character2/root/torso" index="1"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.3, 0.1445, 0)

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("3_mm5mu")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="ParticlesTrail" type="CPUParticles3D" parent="."]
visible = false
material_override = ExtResource("4_oal4v")
cast_shadow = 0
emitting = false
amount = 60
mesh = ExtResource("4_w1jig")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = ExtResource("6_4sn21")

[node name="GPUParticlesTrail" type="GPUParticles3D" parent="."]
material_override = ExtResource("4_oal4v")
cast_shadow = 0
emitting = false
amount = 60
process_material = SubResource("ParticleProcessMaterial_lrxwi")
draw_pass_1 = ExtResource("4_w1jig")

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f3gvv")
volume_db = -5.0
pitch_scale = 1.25

[node name="MoveDelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="FloorDetector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.277241, 0)
target_position = Vector3(0, -2, 0)
collide_with_areas = true

[editable path="Character"]
